使用 Colab 创建而成

--- a/tensorflow/lite/g3doc/models/modify/model_maker/audio_classification.ipynb
+++ b/tensorflow/lite/g3doc/models/modify/model_maker/audio_classification.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/luokj/Toutiao-1/blob/master/tensorflow/lite/g3doc/models/modify/model_maker/audio_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "3XX46cTrh6iD"
       },
       "source": [
@@ -107,22 +97,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "99YS8urEoJPc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
+        "#! unzip /content/birds_dataset_large.zip\n",
+        "#! ls -la /content/\n",
+        "#! mkdir dataset models\n",
+        "#! unzip test.zip\n",
+        "#! unzip train.zip\n",
+        "#!mv test dataset/\n",
+        "#!mv train dataset/\n",
+        "\n",
         "#!wget https://repo.anaconda.com/miniconda/Miniconda3-py39_23.3.1-0-Linux-x86_64.sh\n",
-        "\n",
         "#!chmod +x Miniconda3-py39_23.3.1-0-Linux-x86_64.sh\n",
-        "\n",
         "#!./Miniconda3-py39_23.3.1-0-Linux-x86_64.sh -b -f -p /usr/local\n",
-        "\n",
         "#!conda update conda\n",
         "\n",
         "#import sys\n",
@@ -131,10 +117,70 @@
         "\n",
         "#%%shell\n",
         "#eval \"$(conda shell.bash hook)\"\n",
-        "#conda activate myenv && pip install tflite-model-maker && sudo apt -y install libportaudio2 && pip install numpy==1.23.4 && pip install ipykernel && pip install seaborn\n"
+        "#conda activate myenv && pip install tflite-model-maker && sudo apt -y install libportaudio2 && pip install numpy==1.23.4 && pip install ipykernel && pip install seaborn\n",
+        "\n",
+        "\n",
+        "%%shell\n",
+        "eval \"$(conda shell.bash hook)\"\n",
+        "conda activate myenv\n",
+        "python train_model_script.py\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "nIBDRkDCsMrW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "ttu-v_O9pmJm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!cd /content/drive/\n",
+        "import gdown\n",
+        "url = \"https://drive.google.com/u/1/uc?id=1_Ri7zIOGhmJMZAtMRbl10TUwaDj5w3nx&confirm=t&export=download\"\n",
+        "output = \"birds_dataset_large.zip\"\n",
+        "gdown.download(url, output, quiet=False)"
+      ],
+      "metadata": {
+        "id": "geuxN-09qa-3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mv /content/birds_dataset_large.zip  /content/drive/"
+      ],
+      "metadata": {
+        "id": "U7iXM1RZriuF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%shell\n",
+        "eval \"$(conda shell.bash hook)\"\n",
+        "conda activate myenv\n",
+        "python train_model_script.py"
+      ],
+      "metadata": {
+        "id": "TWvAC0jNx7ON"
       },
       "execution_count": null,
       "outputs": []
@@ -670,8 +716,7 @@
     "colab": {
       "name": "model_maker_audio_classification.ipynb",
       "private_outputs": true,
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
